# card-stock-simulator

./: .gitignore  ARCHITECTURE.md  INSTRUCTION.md  README.md  pyproject.toml
data/datasets/202606/: inbound.csv  orders.csv  storages.csv
data/datasets/fullhistory/: orders.csv  storages.csv
data/datasets/sample/: inbound.csv  initial_stock.csv  orders.csv  storages.csv
data/scenarios/: baseline.yaml  box300.yaml  consolidated.yaml  forecast_stocktake.yaml  forecast_stocktake_box300.yaml  grouped.yaml  scattered.yaml  simple.yaml  smallbox.yaml  top100_stocktake.yaml
sim/: engine.py  models.py  run.py  scenario.py  web_run.py
sim/algorithms/: base.py  baseline.py  consolidated.py  forecast.py  grouped.py  scatter.py  stocktake.py
sim/io/: reader.py  writer.py
sim/web/: app.py
sim/web/templates/: animation.html  base.html  compare.html  csv_view.html  dataset.html  index.html  scenario.html
tests/: test_engine.py
