[project]
name = "card-stock-simulator"
version = "0.1.0"
description = "Trading card warehouse inbound/outbound simulation tool"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
sim = "sim.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sim"]
